# highlander-bazel-setup

./: .gitignore  BAZEL.md  BUILD.bazel  ERRORS.txt  PKG_CONFIG_ERRORS.txt  WORKSPACE  clean.sh  gazelle_helper.go  test.sh
