load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix ""

# gazelle:resolve go paperless/auth //go/src/paperless/auth:go_default_library
# gazelle:resolve go paperless/cache //go/src/paperless/cache:go_default_library
# gazelle:resolve go paperless/cereal //go/src/paperless/cereal:go_default_library
# gazelle:resolve go paperless/commerce //go/src/paperless/commerce:go_default_library
# gazelle:resolve go paperless/config //go/src/paperless/config:go_default_library
# gazelle:resolve go paperless/database //go/src/paperless/database:go_default_library
# gazelle:resolve go paperless/emails //go/src/paperless/emails:go_default_library
# gazelle:resolve go paperless/entitlements //go/src/paperless/entitlements:go_default_library
# gazelle:resolve go paperless/entitlements/resource //go/src/paperless/entitlements/resource:go_default_library
# gazelle:resolve go paperless/entitlements/tokens //go/src/paperless/entitlements/tokens:go_default_library
# gazelle:resolve go paperless/events //go/src/paperless/events:go_default_library
# gazelle:resolve go paperless/furl //go/src/paperless/furl:go_default_library
# gazelle:resolve go paperless/guests //go/src/paperless/guests:go_default_library
# gazelle:resolve go paperless/health //go/src/paperless/health:go_default_library
# gazelle:resolve go paperless/identity //go/src/paperless/identity:go_default_library
# gazelle:resolve go paperless/ids //go/src/paperless/ids:go_default_library
# gazelle:resolve go paperless/jpatch //go/src/paperless/jpatch:go_default_library
# gazelle:resolve go paperless/messaging //go/src/paperless/messaging:go_default_library
# gazelle:resolve go paperless/messaging/pugscrub //go/src/paperless/messaging/pugscrub:go_default_library
# gazelle:resolve go paperless/messaging/queue //go/src/paperless/messaging/queue:go_default_library
# gazelle:resolve go paperless/network //go/src/paperless/network:go_default_library
# gazelle:resolve go paperless/pages //go/src/paperless/pages:go_default_library
# gazelle:resolve go paperless/pagination //go/src/paperless/pagination:go_default_library
# gazelle:resolve go paperless //go/src/paperless:go_default_library
# gazelle:resolve go paperless/perrors //go/src/paperless/perrors:go_default_library
# gazelle:resolve go paperless/proto //go/src/paperless/proto:go_default_library
# gazelle:resolve go paperless/rails //go/src/paperless/rails:go_default_library
# gazelle:resolve go paperless/roto //go/src/paperless/roto:go_default_library
# gazelle:resolve go paperless/stats //go/src/paperless/stats:go_default_library
# gazelle:resolve go paperless/stork //go/src/paperless/stork:go_default_library
# gazelle:resolve go paperless/tags //go/src/paperless/tags:go_default_library
# gazelle:resolve go paperless/templating //go/src/paperless/templating:go_default_library
# gazelle:resolve go paperless/tester //go/src/paperless/tester:go_default_library
# gazelle:resolve go paperless/timber //go/src/paperless/timber:go_default_library
# gazelle:resolve go paperless/timezone //go/src/paperless/timezone:go_default_library
# gazelle:resolve go paperless/tracing //go/src/paperless/tracing:go_default_library
# gazelle:resolve go paperless/cache/inmemory //go/src/paperless/cache/inmemory:go_default_library
# gazelle:resolve go paperless/service/entitlements/converters //go/src/paperless/service/entitlements/converters:go_default_library
# gazelle:resolve go paperless/experiment //go/src/paperless/experiment:go_default_library
# gazelle:resolve go paperless/service/assets/migrate //go/src/paperless/service/assets/migrate:go_default_library
# gazelle:resolve go paperless/service/entitlements //go/src/paperless/service/entitlements:go_default_library
# gazelle:resolve go paperless/service/events //go/src/paperless/service/events:go_default_library
# gazelle:resolve go paperless/service/example //go/src/paperless/service/example:go_default_library
# gazelle:resolve go paperless/service/furl/migrate //go/src/paperless/service/furl/migrate:go_default_library
# gazelle:resolve go paperless/service/furl //go/src/paperless/service/furl:go_default_library
# gazelle:resolve go paperless/service/guests/resource //go/src/paperless/service/guests/resource:go_default_library
# gazelle:resolve go paperless/service/guests/xerr //go/src/paperless/service/guests/xerr:go_default_library
# gazelle:resolve go paperless/service/guests/migration //go/src/paperless/service/guests/migration:go_default_library
# gazelle:resolve go paperless/service/guests/data //go/src/paperless/service/guests/data:go_default_library
# gazelle:resolve go paperless/service/guests //go/src/paperless/service/guests:go_default_library
# gazelle:resolve go paperless/service/identity/models //go/src/paperless/service/identity/models:go_default_library
# gazelle:resolve go paperless/service/identity/modules //go/src/paperless/service/identity/modules:go_default_library
# gazelle:resolve go paperless/service/identity //go/src/paperless/service/identity:go_default_library
# gazelle:resolve go paperless/service/mauler //go/src/paperless/service/mauler:go_default_library
# gazelle:resolve go paperless/service/pages //go/src/paperless/service/pages:go_default_library
# gazelle:resolve go paperless/service/stork/data //go/src/paperless/service/stork/data:go_default_library
# gazelle:resolve go paperless/service/pingpong //go/src/paperless/service/pingpong:go_default_library
# gazelle:resolve go paperless/service/polls //go/src/paperless/service/polls:go_default_library
# gazelle:resolve go paperless/service/reverb //go/src/paperless/service/reverb:go_default_library
# gazelle:resolve go paperless/service/settings/resource //go/src/paperless/service/settings/resource:go_default_library
# gazelle:resolve go paperless/service/settings/api //go/src/paperless/service/settings/api:go_default_library
# gazelle:resolve go paperless/service/settings/binder //go/src/paperless/service/settings/binder:go_default_library
# gazelle:resolve go paperless/service/stork //go/src/paperless/service/stork:go_default_library
# gazelle:resolve go paperless/service/vibes/resource //go/src/paperless/service/vibes/resource:go_default_library
# gazelle:resolve go paperless/service/vibes //go/src/paperless/service/vibes:go_default_library
# gazelle:resolve go paperless/tools/entitlements_backfill/data //go/src/paperless/tools/entitlements_backfill/data:go_default_library
# gazelle:resolve go paperless/service/entitlements/data //go/src/paperless/service/entitlements/data:go_default_library
# gazelle:resolve go paperless/service/entitlements/migrate //go/src/paperless/service/entitlements/migrate:go_default_library
# gazelle:resolve go paperless/service/entitlements/handler //go/src/paperless/service/entitlements/handler:go_default_library
# gazelle:resolve go paperless/service/guests/handler //go/src/paperless/service/guests/handler:go_default_library
# gazelle:resolve go paperless/service/guests/schedule //go/src/paperless/service/guests/schedule:go_default_library
# gazelle:resolve go paperless/service/guests/email //go/src/paperless/service/guests/email:go_default_library
# gazelle:resolve go paperless/service/guests/guest2 //go/src/paperless/service/guests/guest2:go_default_library
# gazelle:resolve go paperless/service/guests/xauth //go/src/paperless/service/guests/xauth:go_default_library
# gazelle:resolve go paperless/service/guests/binder //go/src/paperless/service/guests/binder:go_default_library
# gazelle:resolve go paperless/service/guests/guest //go/src/paperless/service/guests/guest:go_default_library
# gazelle:resolve go paperless/service/guests/message_to_host //go/src/paperless/service/guests/message_to_host:go_default_library
# gazelle:resolve go paperless/service/guests/reqres //go/src/paperless/service/guests/reqres:go_default_library
# gazelle:resolve go paperless/service/guests/invite //go/src/paperless/service/guests/invite:go_default_library
# gazelle:resolve go paperless/service/identity/errors //go/src/paperless/service/identity/errors:go_default_library
# gazelle:resolve go paperless/service/identity/config //go/src/paperless/service/identity/config:go_default_library
# gazelle:resolve go paperless/service/identity/controllers //go/src/paperless/service/identity/controllers:go_default_library
# gazelle:resolve go paperless/service/identity/models/modelsfakes //go/src/paperless/service/identity/models/modelsfakes:go_default_library
# gazelle:resolve go paperless/service/pages/ppfastly //go/src/paperless/service/pages/ppfastly:go_default_library
# gazelle:resolve go paperless/service/reverb/handler //go/src/paperless/service/reverb/handler:go_default_library
# gazelle:resolve go paperless/service/stork/handler //go/src/paperless/service/stork/handler:go_default_library
# gazelle:resolve go paperless/service/vibes/data //go/src/paperless/service/vibes/data:go_default_library
# gazelle:resolve go paperless/service/vibes/handler //go/src/paperless/service/vibes/handler:go_default_library
# gazelle:resolve go paperless/service/vibes/migrate //go/src/paperless/service/vibes/migrate:go_default_library




# gazelle:resolve go paperless/service/assets //go/src/paperless/service/assets:go_default_library
# gazelle:resolve go paperless/service/assets/data //go/src/paperless/service/assets/data:go_default_library
# gazelle:resolve go paperless/service/assets/handler //go/src/paperless/service/assets/handler:go_default_library
# gazelle:resolve go paperless/service/assets/processing //go/src/paperless/service/assets/processing:go_default_library
# gazelle:resolve go paperless/service/assets/resource //go/src/paperless/service/assets/resource:go_default_library
# gazelle:resolve go paperless/service/assets/routing //go/src/paperless/service/assets/routing:go_default_library
# gazelle:resolve go paperless/service/assets/storage //go/src/paperless/service/assets/storage:go_default_library

# gazelle:resolve go paperless/service/auth //go/src/paperless/service/auth:go_default_library

# gazelle:resolve go paperless/service //go/src/paperless/service



gazelle(
    name = "gazelle",
)

